# shiny

./: Cargo.toml  README.md
src/: automation.rs  channel.rs  commands.rs  event_handler.rs  guilds.rs  main.rs  messages.rs  roles.rs  users_commands.rs  utils.rs
