[package]
name = "shiny-bot"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.68"
poise = "0.6.1"
shuttle-runtime = "0.45.0"
shuttle-serenity = "0.45.0"
tracing = "0.1.37"
tokio = "1.26.0"
secrecy = {version = "0.8.0", features = ["serde"]}
serde = {version = "1.0.203", features= ["derive"]}
serde_json = "1.0.117"
